feat: support confirmed meal spending
