# fanda-app/src/types/index.ts
@@ -25,6 +25,9 @@ export type OrderVote = components['schemas']['OrderVote']
 export type OrderParticipant = components['schemas']['OrderParticipant']
 
 export type CalendarRecord = components['schemas']['CalendarRecord']
+export type CalendarOrder = components['schemas']['CalendarOrder']
+export type CalendarOrderItem = components['schemas']['CalendarOrderItem']
+export type CalendarRecordUpdateOrderItem = components['schemas']['CalendarRecordUpdateOrderItem']
 export type RecordPhoto = components['schemas']['RecordPhoto']
 export type RecordComment = components['schemas']['RecordComment']
 export type MonthlyStats = components['schemas']['MonthlyStats']
